--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <meta name="keywords" content="C语言,C++语言,编程指南,编程规范,代码审计,培训"/>
   <meta name="description" content="详细的 C/C++ 安全编程指南、教程、培训资料"/>
+  <meta name="google-site-verification" content="2if6_UYrqsVsI--sNJPom5VqOv-ZSH2DI4u4iU-xsXs" />
   <link type="text/css" rel="stylesheet" href="./css/index.css"/>
   <link type="image/x-icon" rel="shortcut icon" href="./favicon.png"/>
 </head>
