--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="keywords" content="C语言,C++语言,编程指南,编程规范,代码审计,培训"/>
-  <meta name="description" content="详细的 C/C++ 安全编程指南、教程、培训资料"/>
+  <meta name="description" content="《360安全规则集合》是一套完备的 C/C++ 安全编程指南、教程和培训资料，涵盖了数百种需要特别关注的问题，可以帮助您更好地保护您的软件产品免受各种安全威胁。"/>
   <meta name="msvalidate.01" content="1476832802E2F5B021AA8291FD55979B" />
   <meta name="google-site-verification" content="2if6_UYrqsVsI--sNJPom5VqOv-ZSH2DI4u4iU-xsXs" />
   <link type="text/css" rel="stylesheet" href="./css/index.css"/>
@@ -18,11 +18,11 @@
 
 <header>
   <div id="header-wrapper">
-    <a href="https://github.com/Qihoo360/safe-rules/" target="_blank">
-      <img id="main-logo" src="./img/main_logo.png"/>
+    <a href="https://github.com/Qihoo360/safe-rules/">
+      <img alt="logo" id="main-logo" src="./img/main_logo.png"/>
     </a>
     <div id="titles">
-      <div id="main-title">360 安全规则集合 <img src="https://img.shields.io/badge/version-1.3.2-brightgreen"></div>
+      <h1 id="main-title">360 安全规则集合 <img alt="version-1.3.2" src="https://img.shields.io/badge/version-1.3.2-brightgreen"></h1>
       <div id="sub-title">详细的 C/C++ 安全编程指南</div>
     </div>
   </div>
