--- a/detail/introduction.html
+++ b/detail/introduction.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="keywords" content="C语言,C++语言,编程指南,编程规范,代码审计,培训,软件开发,桌面,服务端,嵌入式"/>
-  <meta name="description" content="详细的 C/C++ 安全编程规范、教程、培训资料"/>
+  <meta name="description" content="《360安全规则集合》是一套完备的 C/C++ 安全编程指南、教程和培训资料，涵盖了数百种需要特别关注的问题，可以帮助您更好地保护您的软件产品免受各种安全威胁。"/>
   <link type="text/css" rel="stylesheet" href="../css/index.css"/>
   <link type="image/x-icon" rel="shortcut icon" href="../favicon.png"/>
   <title>360 安全规则集合 - C/C++ 编程指南 - 项目介绍</title>
@@ -16,11 +16,11 @@
 
 <header>
   <div id="header-wrapper">
-    <a href="https://github.com/Qihoo360/safe-rules/" target="_blank">
-      <img id="main-logo" src="../img/main_logo.png"/>
+    <a href="https://github.com/Qihoo360/safe-rules/">
+      <img alt="logo" id="main-logo" src="../img/main_logo.png"/>
     </a>
     <div id="titles">
-      <div id="main-title">360 安全规则集合 <img src="https://img.shields.io/badge/version-1.3.2-brightgreen"></div>
+      <h1 id="main-title">360 安全规则集合 <img alt="version-1.3.2" src="https://img.shields.io/badge/version-1.3.2-brightgreen"></h1>
       <div id="sub-title">详细的 C/C++ 安全编程指南</div>
     </div>
   </div>
@@ -36,7 +36,7 @@
 
 <div id="introduction">
 
-<p>&emsp;&emsp;《360 安全规则集合》简称《安规集》，是一套详细的 C/C++ 安全编程指南，由 360 质量工程部编著，
+<p>&emsp;&emsp;《360 安全规则集合》简称《安规集》，是一套详细的 C/C++ 安全编程指南，由 360 集团质量工程部编著，
 将编程时需要注意的问题总结成若干规则，可为制定编程规范提供依据，也可为代码审计或相关培训提供指导意见，
 旨在提升软件产品的可靠性、健壮性、可移植性以及可维护性，从而提升软件产品的综合安全性能。</p>
 
