--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.5, maximum-scale=2.0, user-scalable=yes" />
   <meta name="keywords" content="C语言,C++语言,编程指南,编程规范,代码审计,培训"/>
   <meta name="description" content="《360安全规则集合》是一套完备的 C/C++ 安全编程指南、教程和培训资料，涵盖了数百种需要特别关注的问题，可以帮助您更好地保护您的软件产品免受各种安全威胁。"/>
   <meta name="msvalidate.01" content="1476832802E2F5B021AA8291FD55979B" />
