--- a/detail/introduction.html
+++ b/detail/introduction.html
@@ -37,6 +37,7 @@
       <p>&emsp;&emsp;关于本项目的最新动态，请参见：<a href="https://github.com/Qihoo360/safe-rules">https://github.com/Qihoo360/safe-rules</a></p>
       <p>&emsp;&emsp;可在 <a href="https://www.apache.org/licenses/LICENSE-2.0">Apache-2.0</a> 协议的许可范围内自由传播和使用本项目相关内容，同时也可以根据自身需求对某些规则进行适当的调整和取舍。</p>
     </div>
+    <div class="content-wrapper content-last-section"></div>
   </div>
 </article>
 <footer>
