--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
   <div class="content-wrapper">
     <h2 id="rules-toc-title">规则目录</h2>
   </div>
-  <div id="rules-toc">    
+  <div id="rules-toc">
     <ol>
 <li id="security" class="rules-toc-chapter">Security<ol>
   <li><a href="./detail/ID_plainSensitiveInfo.html">敏感数据不可写入代码</a></li>
@@ -675,9 +675,9 @@
   </div>
   <div class="content-wrapper content-last-section">
     <h2 id="appendix-title">附录</h2>
-    <ul>
+    <ul id="appendix-list">
       <li><a href="https://github.com/Qihoo360/safe-rules/blob/main/c-ub-list.md" target="_blank">C 未定义行为成因列表</a></li>
-      <li><a href="https://github.com/Qihoo360/safe-rules/blob/main/cpp-ub-list.md" target="_blank">C++ 未定义行为成因列表与标准导读</a></li>
+      <li><a href="./detail/cpp-ub-list.html">C++ 未定义行为成因列表</a></li>
     </ul>
   </div>
 </div>
