--- a/detail/ID_invalidParamArraySize.html
+++ b/detail/ID_invalidParamArraySize.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
-  <meta name="description" content="C/C++ 安全编程要点：数组作为形式参数时，其大小声明起不到实际的限制作用。" />
+  <meta name="description" content="C/C++ 安全编程要点：被声明为数组的形式参数等同于指针，第一个维度的大小声明对传入的实参起不到限制作用。" />
   <link type="text/css" rel="stylesheet" href="../css/detail.css" />
   <link type="image/x-icon" rel="shortcut icon" href="../favicon.png" />
   <script src="../js/iconfont.js"></script>
@@ -21,21 +21,22 @@
   <hr class="dashed-hr"/>
 </header>
 <main>
-<p>数组作为形式参数时，其大小声明起不到实际的限制作用。</p>
+<p>被声明为数组的形式参数等同于指针，第一个维度的大小声明对传入的实际参数起不到限制作用。</p>
 
 <p>示例：</p>
-<code>int foo(int a[100]);   //<i> Non-compliant</i>
+<code>int foo(int a[5]);       //<i> Non-compliant, same as ‘foo(int* a)’</i>
+int bar(int a[5][10]);   //<i> Non-compliant, same as ‘bar(int (*a)[10])’</i>
 
-int bar() {
-    int a[50] = {};
-    return foo(a);     //<i> It can be compiled</i>
+int main() {
+    int a[3] = {};
+    return foo(a);   //<i> It can be compiled</i>
 }
 </code>
 <p>建议在 C++ 代码中采用数组引用或模板的方式：</p>
-<code>void foo(int (&amp;a)[100]);     //<i> Compliant</i>
+<code>void foo(int (&amp;a)[5]);    //<i> Compliant</i>
 
-template &lt;size_t size&gt;
-void foo(int (&amp;a)[size]) {   //<i> Compliant</i>
+template &lt;size_t n&gt;
+void foo(int (&amp;a)[n]) {   //<i> Compliant</i>
     ....
 }
 </code>
@@ -49,7 +50,9 @@ void foo(int (&amp;a)[size]) {   //<i> Compliant</i>
 <h3>依据</h3>
 <hr class="dashed-hr"/>
 <div class="ref-items">ISO/IEC 9899:1999 6.7.5.3(7)
-ISO/IEC 9899:2011 6.7.6.3(7)</div>
+ISO/IEC 9899:2011 6.7.6.3(7)
+ISO/IEC 14882:2003 13.1(3)
+ISO/IEC 14882:2011 13.1(3)</div>
 
 <h3>参考</h3>
 <hr class="dashed-hr"/>
