--- a/detail/ID_sizeof_arrayParameter.html
+++ b/detail/ID_sizeof_arrayParameter.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
-  <meta name="description" content="C/C++ 安全编程要点：当函数的形式参数为数组时，实际上是一个指针，对这种参数使用 sizeof 无法获取到数组大小，往往意味着错误。" />
+  <meta name="description" content="C/C++ 安全编程要点：被声明为数组的形式参数等同于指针，对其使用 sizeof 无法获取到数组大小，往往意味着错误。" />
   <link type="text/css" rel="stylesheet" href="../css/detail.css" />
   <link type="image/x-icon" rel="shortcut icon" href="../favicon.png" />
   <script src="../js/iconfont.js"></script>
@@ -21,27 +21,32 @@
   <hr class="dashed-hr"/>
 </header>
 <main>
-<p>当函数的形式参数为数组时，实际上是一个指针，对这种参数使用 sizeof 无法获取到数组大小，往往意味着错误。</p>
+<p>被声明为数组的形式参数等同于指针，对其使用 sizeof 无法获取到数组大小，往往意味着错误。</p>
 
 <p>示例：</p>
-<code>void fun(char arr[32]) {
-    memset(arr, 0, sizeof(arr));  //<i> Non-compliant</i>
+<code>void fun(char a[10]) {
+    memset(a, 0, sizeof(a));   //<i> Non-compliant</i>
 }</code>
-<p>例中参数 arr 是一个指针，而不是一个真实的数组。</p>
+<p>例中参数 a 是一个指针，sizeof(a) 等同于 sizeof(char*)。</p>
 
 <p>在 C++ 代码中，如果有必要将参数设为数组，建议使用引用的方式，如：</p>
-<code>void fun(char (&amp;arr)[32]) {
-    memset(arr, 0, sizeof(arr));  //<i> Compliant</i>
+<code>void fun(char (&amp;a)[10]) {
+    memset(a, 0, sizeof(a));   //<i> Compliant</i>
 }</code>
-<p>这样 sizeof(arr) 的结果就会和预期一致。</p>
+<p>这样 sizeof(a) 便等同于 sizeof(char[10])。</p>
 
 </main>
 
+<h3>相关</h3>
+<hr class="dashed-hr"/>
+<div class="ref-items"><a href="./ID_invalidParamArraySize.html" class="related-link">ID_invalidParamArraySize</a></div>
 
 <h3>依据</h3>
 <hr class="dashed-hr"/>
 <div class="ref-items">ISO/IEC 9899:1999 6.7.5.3(7)
-ISO/IEC 9899:2011 6.7.6.3(7)</div>
+ISO/IEC 9899:2011 6.7.6.3(7)
+ISO/IEC 14882:2003 13.1(3)
+ISO/IEC 14882:2011 13.1(3)</div>
 
 <h3>参考</h3>
 <hr class="dashed-hr"/>
