--- a/detail/ID_unevaluatedSideEffect.html
+++ b/detail/ID_unevaluatedSideEffect.html
@@ -29,12 +29,12 @@
 <p>在 C++ 语言中有：</p>
 <code>sizeof、typeid、noexcept、decltype、declval
 </code>
-<p>这类运算符不宜作用于逻辑、算术、位运算、函数调用等子表达式。</p>
+<p>这类运算符不宜作用于逻辑、算术、位运算、函数调用等表达式。</p>
 
 <p>特殊情况：</p>
 <ul>
-<li>在 C 语言中，如果 sizeof 作用于变长数组类型，数组长度表达式会被求值。</li>
-<li>在 C++ 语言中，如果 typeid 作用于返回多态类型的函数调用，该函数也会被执行。</li>
+<li>在 C 语言中，如果 sizeof 作用于变长数组类型，数组长度表达式会被求值</li>
+<li>在 C++ 语言中，如果 typeid 作用于多态类型的“<a href="https://en.cppreference.com/w/cpp/language/value_category#glvalue" target="_blank" class="dashed-link">泛左值（glvalue）</a>”，该泛左值会被求值</li>
 
 </ul>
 <p>虽然在某些特殊情况下相关子表达式会被求值，但为了避免意料之外的错误，本规则要求这类运算符的子表达式在任何情况下均不可含有任何副作用。</p>
