--- a/detail/ID_unsuitableMove.html
+++ b/detail/ID_unsuitableMove.html
@@ -23,37 +23,37 @@
 <main>
 <p>std::move 的参数应为左值，返回值应直接作为接口的参数，除此之外的使用方式价值有限，且易产生错误。</p>
 
-<p>std::move 将左值转为右值，意在宣告对象的数据将被转移到其他对象，应由合适的接口完成数据转移。</p>
+<p>“<a href="https://en.cppreference.com/w/cpp/language/value_category#lvalue" target="_blank" class="dashed-link">左值（lvalue）</a>” 可由 std::move 转为“<a href="https://en.cppreference.com/w/cpp/language/value_category#xvalue" target="_blank" class="dashed-link">将亡值（xvalue）</a>”，宣告对象的数据即将转移到其他对象，将亡值和“<a href="https://en.cppreference.com/w/cpp/language/value_category#prvalue" target="_blank" class="dashed-link">纯右值（prvalue）</a>”均应被转移接口的右值引用型参数接收，进而完成数据转移，将亡值和纯右值统称为右值。</p>
 
 <p>示例：</p>
 <code>string foo();
-string s = move(foo());  //<i> Non-compliant</i></code>
-<p>例中 foo 函数返回的是右值，如果再调用 std::move 是多余的，应将 std::move 去掉。</p>
+string s = move(foo());   //<i> Non-compliant</i></code>
+<p>例中 foo 函数返回临时对象，为纯右值，使用 std::move 是多余的。</p>
 
 <p>又如：</p>
 <code>string a(&quot;....&quot;);
-string&amp;&amp; b = move(a);  //<i> Non-compliant</i>
-string c(b);           //<i> Not move construction</i></code>
+string&amp;&amp; b = move(a);   //<i> Non-compliant</i>
+string c(b);            //<i> Not move construction</i></code>
 <p>例中 b 是具有名称的右值引用，其实是左值，c 仍是拷贝构造。</p>
 
 <p>应改为：</p>
 <code>string a(&quot;....&quot;);
-string c(move(a));  //<i> Compliant</i></code>
+string c(move(a));   //<i> Compliant</i></code>
 <p>这样构造 c 时会自动选取移动构造函数，避免了复制。</p>
 
 <p>又如：</p>
 <code>string foo() {
-    string s(&quot;....&quot;);
+    string s;
     ....
-    return move(s);  //<i> Non-compliant</i>
+    return move(s);   //<i> Non-compliant</i>
 }</code>
-<p>例中 foo 函数返回对象，编译器会进行“<a href="https://en.wikipedia.org/wiki/Copy_elision#Return_value_optimization" target="_blank" class="dashed-link">RVO（Return Value Optimization）</a>”优化，显式调用 move 是多余的，而且会干扰优化，不应出现 return std::move(....) 这种代码。</p>
+<p>例中 foo 函数返回对象，编译器会进行“<a href="https://en.wikipedia.org/wiki/Copy_elision#Return_value_optimization" target="_blank" class="dashed-link">RVO（Return Value Optimization）</a>”优化，使用 move 会干扰优化，故不应出现 return std::move(....) 这种代码。</p>
 
 <p>应改为：</p>
 <code>string foo() {
-    string s(&quot;....&quot;);
+    string s;
     ....
-    return s;  //<i> Compliant</i>
+    return s;   //<i> Compliant</i>
 }</code>
 
 </main>
