--- a/detail/ID_forbidLongjmp.html
+++ b/detail/ID_forbidLongjmp.html
@@ -44,7 +44,7 @@ int main() {
 }</code>
 <p>setjmp 返回 0 表示设置跳转位置成功，之后如果调用 longjmp 会跳回 setjmp 的位置，这时 setjmp 返回非 0 值，这种机制在 C 语言中可以用作异常处理，也可以实现“协程”等概念，但会严重地降低代码可读性，在普通的业务逻辑或算法实现中不应使用。</p>
 
-<p>另外，函数间跳转与编译器的优化机制有冲突，如：</p>
+<p>另外，函数间跳转与编译器的优化机制也会产生冲突，如：</p>
 <code>jmp_buf buf;
 
 void foo() { longjmp(buf, 1); }
@@ -58,7 +58,7 @@ void bar() {
         printf(&quot;%d\n&quot;, i);
     }
 }</code>
-<p>在启用优化时和关闭优化时可能会有不同的输出，启用优化时局部变量 i 可能直接存于寄存器，当通过 longjmp 跳转回 bar 函数时，i++ 的结果会丢失。将局部变量用 volatile 限定可解决这种问题，但很容易遗漏或产生无必要的限定。</p>
+<p>这段代码在启用优化时和关闭优化时可能会有不同的输出，启用优化时局部变量 i 可能直接存于寄存器，当通过 longjmp 跳转回 bar 函数时，i++ 的结果会丢失。将局部变量用 volatile 限定可解决这种问题，但很容易遗漏或产生无必要的限定。</p>
 
 </main>
 
