--- a/detail/ID_casualInitialization.html
+++ b/detail/ID_casualInitialization.html
@@ -21,21 +21,24 @@
   <hr class="dashed-hr"/>
 </header>
 <main>
-<p>合理初始化各枚举项，只应从下列方式中选择一种： </p>
+<p>同类枚举项的初始化只应从下列方式中选择一种：</p>
 <ul>
-<li>全不初始化</li>
-<li>只初始化第一个</li>
-<li>全部初始化为不同的值</li>
+<li>全部隐式初始化</li>
+<li>只显式初始化第一个枚举项</li>
+<li>全部显式初始化为不同的值</li>
 
 </ul>
+<p>枚举项可以隐式初始化，由编译器分配不同的值，首项为 0，后续各项依次增 1，也可以显式初始化，由 = 和初始化表达式指定某具体值，应合理初始化各枚举项，避免产生冲突。</p>
+
 <p>示例：</p>
 <code>enum Color {
     red,
     blue,
     green,
     yellow = 2   //<i> Non-compliant</i>
-};
-</code>
+};</code>
+<p>例中隐式初始化的 green 和显式初始化的 yellow 具有相同的值，属于常见笔误。</p>
+
 <p>应改为：</p>
 <code>enum Color {
     red,
