--- a/detail/ID_badName.html
+++ b/detail/ID_badName.html
@@ -44,22 +44,24 @@ int YE5, N0;   //<i> Bad, like a word but not</i>
 int \u540d\u79f0;   //<i> Bad, no readability</i>
 
 int nVarietyisthespiceoflife = 123;   //<i> Bad, hard to read or write</i></code>
-<p>例中 xxx、fun 这种无意义或意义过于空泛的名称，以及 l、lI、N0 这种易与数字或其他单词混淆的名称均是不符合要求的；Unicode 转义名称只应出现在字符串中，否则没有可读性；名称中各单词间应有下划线或大小写变化，否则不便于读写。本规则集合示例中出现的 foo、bar 等名称，意在代指一般的代码元素，仅作示例，实际代码中不应出现。</p>
+<p>例中 xxx、fun 这种无意义或意义过于空泛的名称，以及 l、lI、N0 这种易与数字或其他单词混淆的名称均是不符合要求的；Unicode 转义名称只应出现在字符串中，否则没有可读性；名称中各单词间应有下划线或大小写变化，否则不便于读写。</p>
 
-<p>不良命名方式甚至会导致标准未定义的行为，如：</p>
+<p>本规则集合示例中出现的 foo、bar 等名称，意在代指一般的代码元素，仅作示例，实际代码中不应出现。</p>
+
+<p>注意，不良命名方式甚至会导致标准未定义的行为，如：</p>
 <code>extern int identifier_of_a_very_very_long_name_1;
 extern int identifier_of_a_very_very_long_name_2;   //<i> Dangerous</i></code>
-<p>注意，如果两个名称有相同的前缀，而且相同前缀超过一定长度时是危险的，有可能会导致编译器无法有效区分相关名称。C 标准指明，保证名称前 31 位不同即可避免这种问题，可参见 ISO/IEC 9899:2011 5.2.4.1 的相关规定。</p>
+<p>如果两个名称有相同的前缀，当相同前缀超过一定长度时是危险的，可能会导致编译器无法有效区分相关名称。C 标准指明，保证名称前 31 位不同可避免这种问题。</p>
 
-<p>不建议采用相同“长前缀”+ 不同“短后缀”的命名方式，这种名称非常容易形成笔误或由复制粘贴造成错误，如：</p>
-<code>struct BinExpr {
-    BinExpr* sub0;   //<i> Bad</i>
-    BinExpr* sub1;   //<i> Bad</i>
+<p>不建议采用相同“长前缀”+ 不同“短后缀”的命名方式，这种名称非常容易造成笔误或复制粘贴错误，如：</p>
+<code>struct Expr {
+    Expr* sub0;   //<i> Bad</i>
+    Expr* sub1;   //<i> Bad</i>
 };</code>
-<p>设 BinExpr 是“二元表达式”类，sub0、sub1 为左右子表达式，这种命名方式应改进：</p>
-<code>struct BinExpr {
-    BinExpr* left;   //<i> Better</i>
-    BinExpr* right;  //<i> Better</i>
+<p>设 Expr 是某二元表达式类，sub0、sub1 为左右子表达式，这种命名方式应改进：</p>
+<code>struct Expr {
+    Expr* left;   //<i> Better</i>
+    Expr* right;  //<i> Better</i>
 };</code>
 
 </main>
