--- a/detail/ID_forbidRestrictPtr.html
+++ b/detail/ID_forbidRestrictPtr.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
-  <meta name="description" content="C/C++ 安全编程要点：C 语言的 restrict 指针要求其他指针不能指向与之相同的区域，否则会导致标准未定义的行为，这种特性有助于编译器优化代码，但也增加了误用风险。" />
+  <meta name="description" content="C/C++ 安全编程要点：restrict 指针要求其他指针不能指向与之相同的区域，否则会导致标准未定义的行为，这种特性有助于编译器优化代码，但也增加了误用风险。restrict 指针由 C99 标准提出，不在 C++ 标准之内，在 C++ 代码中不应使用。" />
   <link type="text/css" rel="stylesheet" href="../css/detail.css" />
   <link type="image/x-icon" rel="shortcut icon" href="../favicon.png" />
   <script src="../js/iconfont.js"></script>
@@ -21,7 +21,7 @@
   <hr class="dashed-hr"/>
 </header>
 <main>
-<p>C 语言的 restrict 指针要求其他指针不能指向与之相同的区域，否则会导致标准未定义的行为，这种特性有助于编译器优化代码，但也增加了误用风险。</p>
+<p>restrict 指针要求其他指针不能指向与之相同的区域，否则会导致标准未定义的行为，这种特性有助于编译器优化代码，但也增加了误用风险。restrict 指针由 C99 标准提出，不在 C++ 标准之内，在 C++ 代码中不应使用。</p>
 
 <p>应在效率和风险之间合理取舍，不建议在有高可靠性要求的代码中使用这种特性。</p>
 
