--- a/detail/ID_macro_expNotEnclosed.html
+++ b/detail/ID_macro_expNotEnclosed.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
-  <meta name="description" content="C/C++ 安全编程要点：由于宏只做文本处理，不考虑运算符优先级等问题，可作为子表达式的宏定义应该用括号括起来，否则易产生意料之外的错误。" />
+  <meta name="description" content="C/C++ 安全编程要点：宏的展开只是文本替换，不考虑运算符优先级等问题，所以宏定义为表达式时应该用括号括起来，从而避免意料之外的错误。" />
   <link type="text/css" rel="stylesheet" href="../css/detail.css" />
   <link type="image/x-icon" rel="shortcut icon" href="../favicon.png" />
   <script src="../js/iconfont.js"></script>
-  <title>可作为子表达式的宏定义应该用括号括起来 - C/C++ 安全规则</title>
+  <title>宏定义为表达式时应该用括号括起来 - C/C++ 安全规则</title>
 </head>
 <article>
 <header>
-  <h1>可作为子表达式的宏定义应该用括号括起来</h1>
+  <h1>宏定义为表达式时应该用括号括起来</h1>
   <div id="subtitle">
     <div id="subtitle-id">ID_macro_expNotEnclosed</div>
     <div id="subtitle-tags">
@@ -21,17 +21,18 @@
   <hr class="dashed-hr"/>
 </header>
 <main>
-<p>由于宏只做文本处理，不考虑运算符优先级等问题，可作为子表达式的宏定义应该用括号括起来，否则易产生意料之外的错误。</p>
+<p>宏的展开只是文本替换，不考虑运算符优先级等问题，所以宏定义为表达式时应该用括号括起来，从而避免意料之外的错误。</p>
 
 <p>示例：</p>
 <code>#define ABS(x) (x) &lt; 0? -(x): (x)  //<i> Non-compliant</i>
 </code>
-<p>设 a 为变量，如果按如下使用方式：</p>
+<p>设 a 为变量，如果按如下方式使用宏：</p>
 <code>a = ABS(a) + 1;
 </code>
 <p>则相当于：</p>
-<code>a = (a) &lt; 0? -(a): (a) + 1;</code>
-<p>这显然会造成意料之外的结果，所以 ABS 的定义应改为：</p>
+<code>a = (a) &lt; 0? -(a): (a) + 1;
+</code>
+<p>这显然会造成意料之外的结果，所以宏定义应该用括号括起来：</p>
 <code>#define ABS(x) ((x) &lt; 0? -(x): (x))  //<i> Compliant</i></code>
 
 </main>
@@ -44,8 +45,6 @@ ISO/IEC 9899:2011 6.10.3.5(4)</div>
 
 <h3>参考</h3>
 <hr class="dashed-hr"/>
-<div class="ref-items">CWE-783
-MISRA C 2004 19.10
-MISRA C 2012 20.7</div>
+<div class="ref-items">CWE-783</div>
 </article>
 </html>
