--- a/detail/ID_deprecatedOffsetof.html
+++ b/detail/ID_deprecatedOffsetof.html
@@ -25,7 +25,7 @@
 
 <p>如果 offsetof 用于：</p>
 <ul>
-<li>非“standard-layout”类型</li>
+<li>非“<a href="https://en.cppreference.com/w/cpp/named_req/StandardLayoutType" target="_blank" class="dashed-link">standard-layout</a>”类型</li>
 <li>计算静态成员或成员函数的偏移量</li>
 
 </ul>
