--- a/detail/ID_evaluationOrderReliance.html
+++ b/detail/ID_evaluationOrderReliance.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
-  <meta name="description" content="C/C++ 安全编程要点：不同的求值顺序不应产生不同的结果，否则极易导致意料之外的错误，也会降低代码的可移植性。" />
+  <meta name="description" content="C/C++ 安全编程要点：依赖未声明的求值顺序会导致意料之外的错误，也会降低代码的可移植性。" />
   <link type="text/css" rel="stylesheet" href="../css/detail.css" />
   <link type="image/x-icon" rel="shortcut icon" href="../favicon.png" />
   <script src="../js/iconfont.js"></script>
-  <title>避免依赖特定的子表达式求值顺序 - C/C++ 安全规则</title>
+  <title>不可依赖未声明的求值顺序 - C/C++ 安全规则</title>
 </head>
 <article>
 <header>
-  <h1>避免依赖特定的子表达式求值顺序</h1>
+  <h1>不可依赖未声明的求值顺序</h1>
   <div id="subtitle">
     <div id="subtitle-id">ID_evaluationOrderReliance</div>
     <div id="subtitle-tags">
@@ -21,29 +21,27 @@
   <hr class="dashed-hr"/>
 </header>
 <main>
-<p>不同的求值顺序不应产生不同的结果，否则极易导致意料之外的错误，也会降低代码的可移植性。</p>
+<p>依赖未声明的求值顺序会导致意料之外的错误，也会降低代码的可移植性。</p>
 
-<p>C 标准用“<a href="https://en.wikipedia.org/wiki/Sequence_point" target="_blank" class="dashed-link">序列点（sequence point）</a>”定义求值顺序，序列点前面的表达式先于后面的表达式求值并落实相关副作用，逻辑与、逻辑或、三元、逗号等运算符以及函数调用的左括号与序列点相关，其左子表达式先于右子表达式求值并落实副作用，赋值、算术、位运算等运算符与序列点无关，其左右子表达式的求值顺序是未声明的，函数各参数的求值顺序也是未声明的，C++ 标准与 C 标准大致相同，C++17 明确了赋值、移位等运算符的求值顺序。</p>
+<p>C 标准用“<a href="https://en.wikipedia.org/wiki/Sequence_point" target="_blank" class="dashed-link">序列点（sequence point）</a>”定义求值顺序，序列点前面的表达式先于后面的表达式求值并落实相关副作用。逻辑与、逻辑或、三元、逗号等运算符以及函数调用的左括号与序列点相关，其左子表达式先于右子表达式求值并落实副作用，赋值、算术、位运算等运算符与序列点无关，其左右子表达式的求值顺序是未声明的，函数调用表达式中各参数的求值顺序也是未声明的，详见“<a href="https://en.cppreference.com/w/c/language/eval_order" target="_blank" class="dashed-link">C 求值顺序</a>”。</p>
 
-<p>要注意子表达式的副作用在不同求值顺序下的正确性，可参见 <a href="./ID_confusingAssignment.html" class="dashed-link">ID_confusingAssignment</a> 的进一步说明。</p>
+<p>C++ 标准与 C 标准大致相同，C++17 明确了赋值、移位、数组下标等表达式的求值顺序，详见“<a href="https://en.cppreference.com/w/cpp/language/eval_order" target="_blank" class="dashed-link">C++ 求值顺序</a>”。</p>
 
 <p>示例：</p>
 <code>Stack s {1, 2, 3};      //<i> A stack, the top is 1</i>
-int pop();              //<i> Pop and return the top element from the stack</i>
+int pop(void);          //<i> Pop and return the top element from the stack</i>
 int x = pop() - pop();  //<i> Non-compliant</i></code>
-<p>设 pop 函数弹出并返回栈顶元素，减号左右的两个 pop 函数哪个先执行呢？这是标准未声明的，x 的值可以是 1 - 2，也可以是 2 - 1，由编译器决定。</p>
+<p>设 pop 函数弹出并返回栈顶元素，减号左右的两个 pop 函数哪个先执行呢？这是标准未声明的，x 的值可以是 1 - 2，也可以是 2 - 1，所以不可臆断或依赖这种未声明的求值顺序。</p>
 
 <p>应改为：</p>
 <code>int a = pop();
 int b = pop();
 x = a - b;      //<i> Compliant, or ‘b - a’, depends on your needs</i></code>
-<p>这样便确定是栈项的第一个元素减第二个元素。</p>
+<p>这样便明确了 x 的值为 1 - 2。</p>
 
 <p>又如：</p>
 <code>fun(pop(), pop());  //<i> Non-compliant</i></code>
 <p>设 fun 是函数名称或获取函数指针的表达式，标准规定 fun 会先于参数求值，但参数之间的求值顺序是未声明的。</p>
-
-<p>逻辑与、逻辑或、三元、逗号等表达式可不受本规则限制，但其子表达式需受本规则限制。</p>
 
 </main>
 
