--- a/detail/ID_functionSpecialization.html
+++ b/detail/ID_functionSpecialization.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
-  <meta name="description" content="C/C++ 安全编程要点：特化的函数模板不参与重载函数的选取，易导致意类之外的错误。" />
+  <meta name="description" content="C/C++ 安全编程要点：特化的函数模板不参与重载函数的选取，易导致意料之外的错误。" />
   <link type="text/css" rel="stylesheet" href="../css/detail.css" />
   <link type="image/x-icon" rel="shortcut icon" href="../favicon.png" />
   <script src="../js/iconfont.js"></script>
@@ -21,7 +21,7 @@
   <hr class="dashed-hr"/>
 </header>
 <main>
-<p>特化的函数模板不参与重载函数的选取，易导致意类之外的错误。</p>
+<p>特化的函数模板不参与重载函数的选取，易导致意料之外的错误。</p>
 
 <p>如果某些特殊情况确实需要特化模板，不妨将函数委托给模板类实现，通过特化模板类实现特殊的需求，参见 <a href="./ID_narrowCast.html" class="dashed-link">ID_narrowCast</a>。</p>
 
