--- a/detail/ID_illMemberAccess.html
+++ b/detail/ID_illMemberAccess.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
-  <meta name="description" content="C/C++ 安全编程要点：当流程进入面向构造或析构函数体的 catch 子句时，非静态成员的生命周期已经结束，如果继续访问会导致标准未定义的行为。" />
+  <meta name="description" content="C/C++ 安全编程要点：当流程进入面向构造或析构函数体的 catch 子句时，非静态成员的生命周期已结束，如果继续访问会导致标准未定义的行为。" />
   <link type="text/css" rel="stylesheet" href="../css/detail.css" />
   <link type="image/x-icon" rel="shortcut icon" href="../favicon.png" />
   <script src="../js/iconfont.js"></script>
