--- a/detail/ID_ABIConflict.html
+++ b/detail/ID_ABIConflict.html
@@ -23,7 +23,7 @@
 <main>
 <p>非标准布局类型的运行时特性依赖编译器的具体实现，在不同编译器生成的模块间传递这种类型的对象会导致运行时错误。</p>
 
-<p>“标准布局（standard-layout）”类型的主要特点：</p>
+<p>“<a href="https://en.cppreference.com/w/cpp/named_req/StandardLayoutType" target="_blank" class="dashed-link">标准布局（standard-layout）</a>”类型的主要特点：</p>
 <ul>
 <li>没有虚函数也没有虚基类</li>
 <li>所有非静态数据成员均具有相同的访问权限</li>
