--- a/detail/ID_confusingAssignment.html
+++ b/detail/ID_confusingAssignment.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
-  <meta name="description" content="C/C++ 安全编程要点：在表达式中多次引用并修改同一对象，很可能会因为非预期的求值顺序而产生错误的结果。" />
+  <meta name="description" content="C/C++ 安全编程要点：如果在表达式中多次读写同一对象，很可能会因为非预期的求值顺序而产生错误的结果。" />
   <link type="text/css" rel="stylesheet" href="../css/detail.css" />
   <link type="image/x-icon" rel="shortcut icon" href="../favicon.png" />
   <script src="../js/iconfont.js"></script>
@@ -21,20 +21,17 @@
   <hr class="dashed-hr"/>
 </header>
 <main>
-<p>在表达式中多次引用并修改同一对象，很可能会因为非预期的求值顺序而产生错误的结果。</p>
+<p>如果在表达式中多次读写同一对象，很可能会因为非预期的求值顺序而产生错误的结果。</p>
 
-<p>关于对象的副作用在求值过程中何时生效这一问题，相关标准既复杂又有大量未声明和未定义的情况，故需注意：</p>
+<p>关于表达式的求值顺序，以及副作用何时生效等问题，相关标准既复杂又存在大量未声明的情况。为了避免意料之外的错误，要求表达式中的任一对象：</p>
 <ol>
-<li>写入对象的次数不应超过 1 次</li>
-<li>对象不应既被读取又被写入，除非是为了计算对象的新状态并写入对象</li>
+<li>被写入的次数不应超过 1 次</li>
+<li>不应既被读取又被写入，除非是为了计算对象的新状态而写入对象</li>
+<li>如果对象由 volatile 限定，被读取的次数不应超过 1 次</li>
 
 </ol>
-<p>注意，对 volatile 对象的读取相当于更新对象的值，也是一种副作用，故：</p>
-<ol>
-<li>volatile 对象在表达式中只应出现 1 次</li>
-<li>volatile 对象不应既被读取又被写入</li>
+<p>对于逻辑与、逻辑或、三元以及逗号表达式，标准明确规定了子表达式从左至右求值，左子表达式的副作用也会在右子表达式求值前生效，故子表达式之间可不受本规则限制，但子表达式本身仍受本规则限制，进一步可参见“<a href="https://en.wikipedia.org/wiki/Sequence_point" target="_blank" class="dashed-link">序列点（sequence point）</a>”以及“<a href="https://en.cppreference.com/w/cpp/language/eval_order" target="_blank" class="dashed-link">求值顺序</a>”等概念。</p>
 
-</ol>
 <p>本规则是 <a href="./ID_evaluationOrderReliance.html" class="dashed-link">ID_evaluationOrderReliance</a> 的特化。</p>
 
 <p>示例：</p>
@@ -49,24 +46,26 @@ p-&gt;fun(p++);    //<i> Non-compliant</i>
 
 fun(a, a++);    //<i> Non-compliant</i>
 fun(++a, a++);  //<i> Non-compliant</i></code>
-<p>例中 ++ 泛指写入操作。</p>
+<p>例中表达式均不符合要求。</p>
 
 <p>设 a 是值为 0 的整型变量，如下表达式：</p>
-<code>a = a++;        //<i> Non-compliant</i></code>
-<p>对变量 a 有两次写入，分别是增 1 和赋值为 0（子表达式 a++ 的值为 0），这两次写入的次序在 C 和 C++17 之前的标准中是未声明的，如果先增 1 再赋 0，a 的值最终为 0，如果先赋 0 再增 1，a 的值最终为 1，这种不确定的结果应当避免，C++17 规定了右子表达式的副作用先于赋值生效，所以在 C++17 之后例中表达式是无效的。</p>
+<code>a = a++;   //<i> Non-compliant</i></code>
+<p>对变量 a 有两次写入，分别是增 1 和赋值为 0（子表达式 a++ 的值为 0），这两次写入的次序在 C 和 C++17 之前的标准中是未声明的，如果先增 1 再赋 0，a 的值最终为 0，如果先赋 0 再增 1，a 的值最终为 1，这种不确定的结果应当避免，C++17 规定了右子表达式的副作用先于赋值生效，所以在 C++17 之后该表达式是无效的。</p>
 
-<p>虽然新的标准强化了求值顺序，但这种代码使人费解，很容易造成理解上的偏差，故不应使用。</p>
+<p>虽然新标准强化了求值顺序，但这种代码使人费解，很容易造成理解上的偏差，故不应使用，应改为：</p>
+<code>a++;         //<i> Compliant, or</i>
+a += 1;      //<i> Compliant, or</i>
+a = a + 1;   //<i> Compliant</i>
+</code>
+<p>又如：</p>
+<code>volatile int v;
+fun(v, v);        //<i> Non-compliant</i></code>
+<p>例中 volatile 对象 v 在一个表达式中被读取两次是不符合要求的。volatile 对象的值可在程序之外被改变，对 volatile 对象的读取相当于更新对象的值，也是一种副作用。</p>
 
-<p>如果 a 不是 volatile 变量，应改为：</p>
-<code>a++;            //<i> Compliant, or</i>
-a += 1;         //<i> Compliant, or</i>
-a = a + 1;      //<i> Compliant</i>
-</code>
-<p>如果 a 是 volatile 变量，应改为：</p>
-<code>int tmp = a;
-a = tmp + 1;    //<i> Compliant</i>
-</code>
-<p>对于逻辑与、逻辑或、三元以及逗号表达式，标准明确规定了子表达式从左至右求值，左子表达式的副作用也会在右子表达式求值前生效，故可不受本规则限制，但其子表达式仍需受本规则限制，进一步可参见“<a href="https://en.wikipedia.org/wiki/Sequence_point" target="_blank" class="dashed-link">序列点（sequence point）</a>”以及“<a href="https://en.cppreference.com/w/cpp/language/eval_order" target="_blank" class="dashed-link">求值顺序</a>”等概念。</p>
+<p>应在简单的赋值语句中访问 volatile 对象：</p>
+<code>volatile int v;
+int tmp = v;
+fun(tmp, tmp);    //<i> Compliant</i></code>
 
 </main>
 
