--- a/detail/ID_invalidParamArraySize.html
+++ b/detail/ID_invalidParamArraySize.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
-  <meta name="description" content="C/C++ 安全编程要点：被声明为数组的形式参数等同于指针，第一个维度的大小声明对传入的实参起不到限制作用。" />
+  <meta name="description" content="C/C++ 安全编程要点：被声明为数组的形式参数等同于指针，第一个维度的大小声明对传入的实际参数起不到限制作用。" />
   <link type="text/css" rel="stylesheet" href="../css/detail.css" />
   <link type="image/x-icon" rel="shortcut icon" href="../favicon.png" />
   <script src="../js/iconfont.js"></script>
