--- a/detail/ID_minusOnUnsigned.html
+++ b/detail/ID_minusOnUnsigned.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
-  <meta name="description" content="C/C++ 安全编程要点：负号作用于 unsigned int、unsigned long 或 unsigned long long 等无符号整型表达式的结果仍为无符号整数，易产生意料之外的错误。" />
+  <meta name="description" content="C/C++ 安全编程要点：负号作用于 unsigned int、unsigned long、unsigned long long 等无符号整型表达式的结果仍为无符号整数，易产生意料之外的错误。" />
   <link type="text/css" rel="stylesheet" href="../css/detail.css" />
   <link type="image/x-icon" rel="shortcut icon" href="../favicon.png" />
   <script src="../js/iconfont.js"></script>
