--- a/detail/ID_returnSameConst.html
+++ b/detail/ID_returnSameConst.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
-  <meta name="description" content="C/C++ 安全编程要点：函数所有返回值均为相同的常量是没有意义的。" />
+  <meta name="description" content="C/C++ 安全编程要点：被返回的表达式均为相同的常量是没有意义的。" />
   <link type="text/css" rel="stylesheet" href="../css/detail.css" />
   <link type="image/x-icon" rel="shortcut icon" href="../favicon.png" />
   <script src="../js/iconfont.js"></script>
